--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
-  "name": "rss-consumer",
-  "version": "1.0.0",
-  "description": "A background job that fetches rss content from a subscription list",
-  "main": "index.js",
-  "author": "arthur teixeira <arthurcarvalho24@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "@types/cron": "^2.0.0",
-    "cron": "^2.0.0",
-    "express": "^4.18.1",
-    "global": "^4.4.0",
-    "typeorm": "^0.3.6"
-  },
-  "scripts": {
-    "dev": "nodemon ./src/app.ts"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "nodemon": "^2.0.16",
-    "ts-node": "^10.8.0",
-    "typescript": "^4.6.4"
-  }
+   "name": "rss-consumer",
+   "version": "1.0.0",
+   "description": "A background job that fetches rss content from a subscription list",
+   "main": "index.js",
+   "author": "arthur teixeira <arthurcarvalho24@gmail.com>",
+   "license": "MIT",
+   "dependencies": {
+      "@types/cron": "^2.0.0",
+      "axios": "^0.27.2",
+      "cron": "^2.0.0",
+      "express": "^4.18.1",
+      "global": "^4.4.0",
+      "pg": "^8.4.0",
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "0.3.6"
+   },
+   "scripts": {
+      "dev": "nodemon ./src/app.ts",
+      "start": "ts-node src/index.ts",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "devDependencies": {
+      "@types/express": "^4.17.13",
+      "@types/node": "^16.11.10",
+      "nodemon": "^2.0.16",
+      "ts-node": "10.7.0",
+      "typescript": "4.5.2"
+   }
 }
