--- a/cron-job/package.json
+++ b/cron-job/package.json
@@ -8,6 +8,7 @@
    "dependencies": {
       "@types/cron": "^2.0.0",
       "axios": "^0.27.2",
+      "bayes": "^1.0.0",
       "cron": "^2.0.0",
       "express": "^4.18.1",
       "global": "^4.4.0",
